force-app/main/default/objects/ssot__CustodyItem__dlm/fields/ssot__CustodyItemCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__CustodyItemCategory__c</fullName>
    <label>Custody Item Category</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CustodyItemCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>