force-app/main/default/objects/ssot__CustodyItem__dlm/fields/ssot__CustodyItemStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__CustodyItemStatus__c</fullName>
    <label>Custody Item Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CustodyItemStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>