force-app/main/default/objects/ssot__CustodyItem__dlm/fields/ssot__CustodyItemUsageType__c.field-meta.xml
<CustomField>
    <fullName>ssot__CustodyItemUsageType__c</fullName>
    <label>Custody Item Usage Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CustodyItemUsageType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>