force-app/main/default/objects/ssot__CustodyItem__dlm/fields/ssot__rel_1731658752122_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731658752122_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CustodyItem_SubjectId_map_CareProgra_rel</label>
    <referenceTo>ssot__CareProgramEnrollee__dlm</referenceTo>
    <relationshipLabel>CustodyItem_SubjectId_map_CareProgra_rel</relationshipLabel>
    <relationshipName>rel_1731658752122_end</relationshipName>
    <type>Lookup</type>
</CustomField>